--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "guzzlehttp/guzzle": "^6.2",
         "illuminate/queue": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*",
         "illuminate/notifications": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*",
-        "illuminate/support": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*"
+        "illuminate/support": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*",
+        "mobizon/mobizon-php": "1.0.*"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.2",
