--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Mobizon Notifications channel for Laravel 5.3.",
     "keywords": ["laravel", "notifications", "mobizon", "mobizon.kz"],
     "homepage": "https://github.com/laraketai/mobizon",
-    "minimum-stability": "dev",
+    "minimum-stability": "alpha",
     "version":"0.0.1",
     "license": "MIT",
     "authors": [
